@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 e8404ce281dcffe1f1cb5b66c15bf59c40329fa9 ChangeLog
+SHA1 804803d7f5765f524fe20be4772e968a91fddee3 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 2405b691fcb18b468ccb31cab97babb75e4d1f30 MANIFEST
-SHA1 f09b6ee5599da6dc2faff3f84ad1fc6c375669bd META.yml
-SHA1 a61de4db3cc5fa58d7f1d7e11e688ab90fe99633 Makefile.PL
+SHA1 7574b9f172b989186d2dce64ce57b89394ea564f META.yml
+SHA1 6217cad2697cb97229a7a42f898eae62dea75838 Makefile.PL
 SHA1 7250b2f536fe8a96fb25fc7435146bc006aaefe1 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 b49ee0f29a9e578dfc05ac8a69ceee952810622d bin/fullauto.pl
@@ -47,7 +47,7 @@ SHA1 6fed559b971e9d2f091e0776ddbb131be5225a36 inc/Module/Install/Win32.pm
 SHA1 ea528c813c3473a2674fcbed06531c2f795116ce inc/Module/Install/WriteAll.pm
 SHA1 00bb8470354d11bd7c2c74633083ebe627eb2b7e inc/Module/Install/with.pm
 SHA1 fb2c2f6e2ade19cd024dad15dd25bebf85023a4b install_mozrepl_plugin.ahk
-SHA1 bf3ffb666254f8bb95234bad6fe02352676d673a lib/Net/FullAuto.pm
+SHA1 b5552609667abd5310c0a00cb380f83ec14eba77 lib/Net/FullAuto.pm
 SHA1 dabbf5e523732ed0d3084fb91dcccb4f1c330ceb lib/Net/FullAuto/Custom/BackUp/README
 SHA1 c2219c6cd1af2a775ebd3b90e0d4731ef0aededc lib/Net/FullAuto/Custom/README
 SHA1 32064cac342c1fab8377c4b9fe5c41be23a92e78 lib/Net/FullAuto/Distro/fa_code.pm
@@ -64,11 +64,11 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJTq1HxAAoJEBa/9Pad787ETi8IAKRxt/cR3FdXEeDUaK1gUk96
-32i6Th8iy/MFpE/5XJIU8Dl+RzQvImBGVXXnp+f7TJK2Hc91lbzJXMajBKYlSZhV
-zaoOjU2bln9E6muaoCIFr6rxscbkK3fj8V7SxUZxhSc8lXzws6BfQJRebAE5evPM
-v8x1kajV8zvyQePR4uBwlebSE8DWYZXNOF9UOnJv8awgzFici6CHCoeG7HKFil7h
-deSGgEj9540pMA4afpMIZL16r3oPEwohJbpRW9q1yDQBdv/8qTslVLBPEt8FTSk2
-Z5xsCaKJxNdheg8InpHfDIx6iU0PkCUimUO8Dd/qqJb6LKZotiJYM/G7ZCn/AHw=
-=er8e
+iQEcBAEBAgAGBQJTq/DzAAoJEBa/9Pad787E5OgH/3DzJxgySxCZGYSFU+ClAXRI
+H9qZVzWZUqxdFFkZ7Ag3fWNm+PjYt+lToH5T6mYKCCAFqiTzi+yXhRzfD+/3I95w
+JwfSt0vwKCaz7wkgvnRVfhe2mTiyrrIGocCADNaUFmlpg/qsrP2vf/608e6LBO/u
+Q2Ikic7Jkt+CUESBi3gy/yxkkxJ6DiOLKQp8D6F1rrEZWG+4YQSvWtSZaa/mXQ15
+HzUupOeimcOkTs705FGdJ6lfQQpZbttJBkePay4OdF/bgEBB3pLnFyFDQSJ6wvRV
+wbj+xM0KhinoQi79UerMc0uAehruuC+amzgIPQc/wYapo1v7DdRPZ45Rr+6qlUM=
+=TFmM
 -----END PGP SIGNATURE-----
