@@ -19,6 +19,13 @@
 ################################################################
 
 
+2014-06-26  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 0.9999999914 released.
+
+        * Updated Makefile.PL for AWS Ubuntu installations.
+
+
 2014-06-25  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 0.9999999913 released.
